Algunos cambios en netflix

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <a href="./pages/Google.html">GOOGLE</a><a href="./pages/Bing.html">BING</a><a href="./pages/Netflix.html">NETFLIX</a>
+    <a href="./pages/Google.html">GOOGLE</a><br><a href="./pages/Bing.html">BING</a><br><a href="./pages/Netflix.html">NETFLIX</a>
 </body>
 </html>
